# emg2qwerty

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  wait_and_run.sh
.github/workflows/: testing.yml
checkpoints/autoencoder/: autoencoder-epoch=15-val_loss=0.0000.ckpt  autoencoder-epoch_51-val_loss_0.0000.ckpt  last-v1.ckpt  last-v2.ckpt  last.ckpt
checkpoints/autoencoder_lr_0.0001/: autoencoder_lr_0.0001-epoch=58-val_loss=0.0000.ckpt  last.ckpt
checkpoints/model-autoencoder-ms-tiny/: last.ckpt
checkpoints/model-autoencoder-tiny/: last.ckpt  model-autoencoder-tiny-e_epoch=125-val_CER_=0.0000.ckpt  model-autoencoder-tiny-e_epoch_144-val_CER_0.0000.ckpt
checkpoints/model-multi-scale-autoencoder-tiny/: last.ckpt  model-multi-scale-autoencoder-tiny-epochepoch=144-val_metricval_metric=0.0000.ckpt
checkpoints/model-multi-scale-tiny/: last.ckpt  model-multi-scale-tiny-e_epoch_90-val_CER_0.0000.ckpt
checkpoints/model-tiny/: last.ckpt  model-tiny-epoch_121-val_CER_0.0000.ckpt
config/: autoencoder.yaml  base.yaml  multi_scale.yaml  reduced.yaml
config/cluster/: local.yaml  slurm.yaml
config/dataset/: generic.yaml  personalized_user0.yaml  personalized_user1.yaml  personalized_user2.yaml  personalized_user3.yaml  personalized_user4.yaml  personalized_user5.yaml  personalized_user6.yaml  personalized_user7.yaml  personalized_user8.yaml  personalized_user9.yaml
config/decoder/: ctc_beam.yaml
config/lr_scheduler/: cosine_annealing.yaml  cosine_annealing_warm_restarts.yaml  linear_warmup_cosine_annealing.yaml  reduce_on_plateau.yaml
config/model/: tds_conv_ctc.yaml  tds_conv_ctc_autoencoder_base.yaml  tds_conv_ctc_autoencoder_ms_base.yaml  tds_conv_ctc_autoencoder_ms_small.yaml  tds_conv_ctc_autoencoder_ms_tiny.yaml  tds_conv_ctc_autoencoder_small.yaml  tds_conv_ctc_autoencoder_tiny.yaml  tds_conv_ctc_base.yaml  tds_conv_ctc_ms_tiny.yaml  tds_conv_ctc_multi_scale.yaml  tds_conv_ctc_reduced.yaml  tds_conv_ctc_small.yaml  tds_conv_ctc_tiny.yaml
config/transforms/: log_mel.yaml  log_spectrogram.yaml
config/user/: generic.yaml  generic_reduced.yaml  joined_users.yaml  single_user.yaml  user0.yaml  user1.yaml  user2.yaml  user3.yaml  user4.yaml  user5.yaml  user6.yaml  user7.yaml  user8.yaml  user9.yaml
data_analysis/: prompts.ipynb
emg2qwerty/: autoencoder_train.py  charset.py  data.py  decoder.py  lightning.py  metrics.py  modules.py  preprocessing.py  train.py  transforms.py  utils.py
emg2qwerty/tests/: __init__.py  charset_test.py  data_test.py  decoder_test.py  modules_test.py  test_charset.py  test_decoder.py
experiments/: compiled_results.csv  gpu_discrepncy.ipynb  load_experiment_data.py  paper_results.json  paper_results_comparison.ipynb
experiments/2024070201/: generic_metrics_greedy.json  plots.ipynb
experiments/2024070301/: plots.ipynb
experiments/2024070301/metrics/: user0_metrics_greedy.json  user1_metrics_greedy.json  user2_metrics_greedy.json  user3_metrics_greedy.json  user4_metrics_greedy.json  user5_metrics_greedy.json  user6_metrics_greedy.json  user7_metrics_greedy.json
experiments/2024070302/: plots.ipynb
experiments/2024070302/metrics/: user0_metrics_greedy.json  user1_metrics_greedy.json  user2_metrics_greedy.json  user3_metrics_greedy.json  user4_metrics_greedy.json  user5_metrics_greedy.json  user6_metrics_greedy.json  user7_metrics_greedy.json
experiments/2024070303/: plots.ipynb
experiments/2024070303/metrics/: user1_metrics_6_gram.json  user2_metrics_6_gram.json  user3_metrics_6_gram.json  user4_metrics_6_gram.json  user5_metrics_6_gram.json  user6_metrics_6_gram.json  user7_metrics_6_gram.json  user8_metrics_6_gram.json
experiments/2024070304/: plots.ipynb
experiments/2024070304/metrics/: user0_metrics_6_gram.json  user1_metrics_6_gram.json  user2_metrics_6_gram.json  user3_metrics_6_gram.json  user4_metrics_6_gram.json  user5_metrics_6_gram.json  user6_metrics_6_gram.json  user7_metrics_6_gram.json
experiments/2024070305/: plots.ipynb
experiments/2024070305/metrics/: user0_metrics_6_gram.json  user1_metrics_6_gram.json  user2_metrics_6_gram.json  user3_metrics_6_gram.json  user4_metrics_6_gram.json  user5_metrics_6_gram.json  user6_metrics_6_gram.json  user7_metrics_6_gram.json
experiments/2024070306/: generic_metrics_greedy.json  plots.ipynb
experiments/2024070401/: plots.ipynb
experiments/2024070401/metrics/: user0_metrics_greedy.json  user1_metrics_greedy.json  user2_metrics_greedy.json  user3_metrics_greedy.json  user4_metrics_greedy.json  user5_metrics_greedy.json  user6_metrics_greedy.json  user7_metrics_greedy.json
experiments/2024070402/: plots.ipynb
experiments/2024070402/metrics/: user0_metrics_6_gram.json  user1_metrics_6_gram.json  user2_metrics_6_gram.json  user3_metrics_6_gram.json  (+4 more)
experiments/2024070502/: plots.ipynb
experiments/2024070601/: plots.ipynb
experiments/2024070602/: compiled_metrics.json  plots.ipynb
experiments/2024070603/: compiled_metrics.json  plots.ipynb
experiments/2024070604/: compiled_metrics.json  plots.ipynb
experiments/2024070606/: compiled_metrics.json  plots.ipynb
experiments/2024070702/: compiled_metrics.json  plots.ipynb
models/: generic.ckpt
models/personalized_finetuned/: user0.ckpt  user1.ckpt  user2.ckpt  user3.ckpt  user4.ckpt  user5.ckpt  user6.ckpt  user7.ckpt
models/personalized_randominit/: user0.ckpt  user1.ckpt  user2.ckpt  user3.ckpt  user4.ckpt  user5.ckpt  user6.ckpt  user7.ckpt
outputs/: config.yaml  results.txt
research/: 20250302_data_exploration.py  20250303_channel_reduction.py  20250306_delete_nonexistent_data.py  20250306_download_s3.py  20250308_reduce_dataset.py  example_usage.py  start_research.py
scripts/: convert_to_bids.py  experimental_results.py  generate_splits.py  plot_losses.py  print_dataset_stats.py  result_collection.py
scripts/lm/: build_char_lm.sh  preprocess_char_lm.py
(+468 files in other folders)
