[tool.poetry]
name = "emg2qwerty"
version = "0.1.0"
description = "Baselines for modeling QWERTY typing from surface electromyography."
authors = ["Viswanath Sivakumar <viswanath@meta.com>"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "emg2qwerty"}]

[tool.poetry.dependencies]
python = ">=3.10.13"
click = ">=8.1.7"
datasets = ">=2.19.2"
matplotlib = "^3.4.3"
seaborn = "^0.13.0"
typer = "^0.12.3"
h5py = ">=3.11.0"
boto3 = ">=1.36.1"
hydra-core = ">=1.3.2"
hydra-submitit-launcher = ">=1.2.0"
lightning-bolts = ">=0.7.0"
mne-bids = ">=0.15.0"
nltk = ">=3.8.1"
numpy = ">=1.24.4"
omegaconf = ">=2.3.0"
pandas = ">=2.0.3"
python-levenshtein = ">=0.12.2"
pytorch-lightning = ">=1.8.6"
pyyaml = ">=5.4.1"
pydantic = ">=2.5.2"
scipy = ">=1.10.1"
scikit-learn = ">=1.3.2"
torch = ">=2.3.0"
torchaudio = ">=2.3.0"
torchmetrics = ">=0.11.4"
trio = ">=0.23.2"
unidecode = ">=1.3.8"
camel-kenlm = {git = "https://github.com/stepanhruda/camel-kenlm.git", rev = "a6e906b2b30497dd999cb9c84c42c5111f8616e0"}

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7.1"
ruff = ">=0.9.9"
pytest = ">=7.4.4"
pytest-benchmark = ">=4.0.0"
pytest-cov = ">=5.0.0"
pytest-env = ">=1.1.3"
pytest-mock = ">=3.14.0"
pytest-rerunfailures = ">=14.0"
pytest-xdist = {extras = ["psutil"], version = "3.5.0"}
hypothesis = ">=6.97.6"
ipykernel = "^6.0.1"
ipython = "^7.25.0"
ipdb = "^0.13.9"
mypy = "^0.910"
python-dotenv = "^0.21.0"
pydantic-settings ="^2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
exclude = [ ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules",]
line-length = 100
indent-width = 4
select = ["E", "F", "I"]  # E and F for flake8, I for isort

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["emg2qwerty"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [ "E712", "ARG001",]
"research/*.py" = [ "T201", "ARG", "E402", "E501", "F841", ]

[tool.mypy]
check_untyped_defs = true
follow_imports = "normal"
implicit_optional = false
show_column_numbers = true
show_error_codes = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = false

[[tool.mypy.overrides]]
module = "pytorch_lightning"
follow_imports = "skip"
follow_imports_for_stubs = false
